--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@stream-io/video-react-sdk": "^1.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
+    "cors": "^2.8.6",
     "emoji-picker-react": "^4.13.3",
+    "express": "^5.2.1",
     "groq-sdk": "^0.36.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.563.0",
@@ -35,6 +37,7 @@
     "react-query": "^3.39.3",
     "react-social-media-embed": "^2.5.13",
     "react-timeago": "^7.2.0",
+    "serverless-http": "^4.0.0",
     "sonner": "^1.4.41",
     "stream-chat": "^9.20.0",
     "stream-chat-react": "^13.7.0",
