--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
@@ -33,8 +33,29 @@
     "**/*.ts",
     "**/*.tsx",
     "../backend/.next/types/**/*.ts",
-    "middleware.ts"
-, "../frontend/lib/formatnumber.ts", "routes/account.js", "routes/marketPosts.js", "routes/myProfile.js", "routes/users.js", "routes/userPosts.js", "routes/user.js", "routes/ai-reply.js", "routes/token.js", "routes/upsert.js", "routes/statusPosts.js", "routes/search.js", "routes/profile.js", "routes/posts.js", "routes/comments.js", "routes/like.js", "routes/view.js", "routes/followers.js", "routes/news.js", "routes/recast.js", "routes/unlike.js"  ],
+    "middleware.ts",
+    "../frontend/lib/formatnumber.ts",
+    "routes/account.js",
+    "routes/marketPosts.js",
+    "routes/myProfile.js",
+    "routes/users.js",
+    "routes/userPosts.js",
+    "routes/user.js",
+    "routes/ai-reply.js",
+    "routes/token.js",
+    "routes/upsert.js",
+    "routes/statusPosts.js",
+    "routes/search.js",
+    "routes/profile.js",
+    "routes/posts.js",
+    "routes/comments.js",
+    "routes/like.js",
+    "routes/view.js",
+    "routes/followers.js",
+    "routes/news.js",
+    "routes/recast.js",
+    "routes/unlike.js"
+  ],
   "exclude": [
     "node_modules"
   ]
